overlapping fix

--- a/app/css/common/images.css
+++ b/app/css/common/images.css
@@ -1,3 +1,6 @@
+.main-section {
+}
+
 .maker-round {
   text-align: center;
   font-family: NanumBarunGothic;
